@@ -25,7 +25,7 @@ requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Wikibase-Datatype-Print/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Wikibase-Datatype-Print';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Wikibase-Datatype-Print';
-test_requires 'Wikibase::Datatype' => 0.12;
+test_requires 'Wikibase::Datatype' => 0.25;
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0;
 test_requires 'Test::More' => 0;
